@@ -70,6 +70,9 @@
 # In most cases the environment variable name is the parameter name (in upper
 # case) with the prefix  COB_  .
 
+# Note: If you want to *slightly* speed up a program's startup time, remove all
+#       of the comments from the actual real configuration file that is processed
+
 #
 ## General environment
 #
@@ -477,6 +480,3 @@
 #             Type:  string
 #          Default:  'end of program, please press a key to exit' (localized)
 #          Example:  COB_EXIT_MSG ''
-
-# Note: If you want to slightly speed up a program's startup time, remove all
-#       of the comments from the actual real file that is processed
