@@ -1,7 +1,0 @@
-# Signature of the current package.
-m4_define([AT_PACKAGE_NAME],	  [GnuCOBOL])
-m4_define([AT_PACKAGE_TARNAME],	  [gnu-cobol])
-m4_define([AT_PACKAGE_VERSION],	  [2.0])
-m4_define([AT_PACKAGE_STRING],	  [GnuCOBOL 2.0])
-m4_define([AT_PACKAGE_BUGREPORT], [open-cobol-list@lists.sourceforge.net])
-m4_define([AT_PACKAGE_URL],       [http://www.opencobol.org])
