@@ -1,4 +1,8 @@
 
+2017-12-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* bootstrap: ensure auxiliary scripts are executable
+
 2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* bootstrap: new script for creating missing files after checkout
